log
Tue 21 Mar 2023 03:43:58 PM UTC: 
 tests:  0|6
total_score: 0/70
c918822
Tue 21 Mar 2023 04:01:30 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
e74af00
Tue 21 Mar 2023 04:02:51 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |      List *lista = (List*) malloc(sizeof(List));
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
29ae457
Tue 21 Mar 2023 04:04:15 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70e11c9
Tue 21 Mar 2023 04:04:50 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
71edb03
Tue 21 Mar 2023 04:17:45 PM UTC: 
 list.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
1b2bf9d
Tue 21 Mar 2023 04:18:34 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
78109bc
Tue 21 Mar 2023 04:19:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75b7550
Tue 21 Mar 2023 04:19:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2fc63d6
Tue 21 Mar 2023 05:16:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bdfd414
Tue 21 Mar 2023 05:16:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
16d87fc
Tue 21 Mar 2023 05:21:12 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9cd1935
Tue 21 Mar 2023 05:32:02 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
b353bc6
Tue 21 Mar 2023 05:32:26 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
e107f64
Tue 21 Mar 2023 05:32:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
462574c
Tue 21 Mar 2023 05:34:04 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
02b5b6f
Tue 21 Mar 2023 05:43:18 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
9ebc5be
Tue 21 Mar 2023 05:52:19 PM UTC: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
9fb4120
Tue 21 Mar 2023 06:09:07 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
8214b88
Tue 21 Mar 2023 06:09:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
8710212
Tue 21 Mar 2023 06:11:09 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
93149ae
Tue 21 Mar 2023 06:11:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c4f7233
Tue 21 Mar 2023 06:14:57 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
9f1f7bb
Tue 21 Mar 2023 06:15:27 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
b6948f1
Tue 21 Mar 2023 06:15:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
9d1b69e
Tue 21 Mar 2023 06:18:15 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
6233dd0
Thu 23 Mar 2023 05:44:27 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
2657b85
Thu 23 Mar 2023 05:45:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1789d2e
Thu 23 Mar 2023 05:47:23 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
482a2ed
Thu 23 Mar 2023 05:48:06 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
34a59ee
Thu 23 Mar 2023 05:48:38 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a382cc0
Thu 23 Mar 2023 05:49:40 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
7a24d87
Thu 23 Mar 2023 05:50:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
5ce4b13
Thu 23 Mar 2023 05:50:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
622567e
Thu 23 Mar 2023 05:50:55 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
b5b7db7
Thu 23 Mar 2023 06:06:19 PM UTC: 
 list.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  0|0
a125c88
Thu 23 Mar 2023 06:07:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:99:42: error: expected ‘;’ before ‘}’ token
   99 |     nodoNuevo->next = list->current->next
      |                                          ^
      |                                          ;
  100 |   }
      |   ~                                       
Compilation failed
f21520a
Thu 23 Mar 2023 06:07:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:99:42: error: expected ‘;’ before ‘:’ token
   99 |     nodoNuevo->next = list->current->next:
      |                                          ^
      |                                          ;
Compilation failed
8ac3acd
Thu 23 Mar 2023 06:07:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
071f7b0
Thu 23 Mar 2023 06:29:21 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
test.c: In function ‘pushCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:123:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  123 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:114:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  114 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a829c8
Thu 23 Mar 2023 06:30:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
827c836
Thu 23 Mar 2023 06:31:04 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
2b1df0b
Fri 24 Mar 2023 03:37:51 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
b7af70c
Fri 24 Mar 2023 03:45:31 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:3: error: expected expression before ‘}’ token
   98 |   }
      |   ^
Compilation failed
d737c02
Fri 24 Mar 2023 03:46:06 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
2cb2dc2
Fri 24 Mar 2023 04:04:08 PM UTC: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|0
943f640
Fri 24 Mar 2023 04:05:07 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
a701869
Fri 24 Mar 2023 04:06:40 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
c8d3568
Fri 24 Mar 2023 04:07:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8dc105e
Fri 24 Mar 2023 04:07:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7822e53
Fri 24 Mar 2023 04:18:29 PM UTC: 
 list.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|0
e07c936
Fri 24 Mar 2023 04:33:01 PM UTC: 
 list.c | 30 ++++++++++++++++++++++++++----
 1 file changed, 26 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
e767e10
